Import TOC from XML -> doctitle will be added in TOC. -> If section name is missing then untitled section will be added as default. -> If level is missing but section name is there then error will be thrown.
Import TOC from csv/delimited text
-> If level is less than 1 then error will be thrown.

--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -3025,4 +3025,7 @@ Error text: {1}</value>
   <data name="FileInUse" xml:space="preserve">
     <value>This file is being used by other process.Please close all applications using this file and try again</value>
   </data>
+  <data name="WrongFormat" xml:space="preserve">
+    <value>File imported is in wrong format. Make sure proper level is given for each section.</value>
+  </data>
 </root>
