--- a/trunk/Obi/Obi/Dialogs/AssignSpecialNodeMark.resx
+++ b/trunk/Obi/Obi/Dialogs/AssignSpecialNodeMark.resx
@@ -137,7 +137,7 @@
   </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="m_cmbBoxSpecialNode.Location" type="System.Drawing.Point, System.Drawing">
-    <value>177, 77</value>
+    <value>259, 99</value>
   </data>
   <data name="m_cmbBoxSpecialNode.Size" type="System.Drawing.Size, System.Drawing">
     <value>181, 21</value>
@@ -163,13 +163,13 @@
     <value>Flat</value>
   </data>
   <data name="m_btn_OK.Location" type="System.Drawing.Point, System.Drawing">
-    <value>162, 119</value>
+    <value>244, 157</value>
   </data>
   <data name="m_btn_OK.Size" type="System.Drawing.Size, System.Drawing">
     <value>90, 31</value>
   </data>
   <data name="m_btn_OK.TabIndex" type="System.Int32, mscorlib">
-    <value>6</value>
+    <value>8</value>
   </data>
   <data name="m_btn_OK.Text" xml:space="preserve">
     <value>OK</value>
@@ -190,13 +190,13 @@
     <value>Flat</value>
   </data>
   <data name="m_btn_Cancel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>268, 119</value>
+    <value>350, 157</value>
   </data>
   <data name="m_btn_Cancel.Size" type="System.Drawing.Size, System.Drawing">
     <value>90, 31</value>
   </data>
   <data name="m_btn_Cancel.TabIndex" type="System.Int32, mscorlib">
-    <value>7</value>
+    <value>9</value>
   </data>
   <data name="m_btn_Cancel.Text" xml:space="preserve">
     <value>Cancel</value>
@@ -238,7 +238,7 @@
     <value>m_gp_box_operation</value>
   </data>
   <data name="&gt;&gt;m_rdb_btn_SpecialPhrase.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>3</value>
   </data>
   <data name="m_rdb_btn_RenumberPages.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -265,7 +265,7 @@
     <value>m_gp_box_operation</value>
   </data>
   <data name="&gt;&gt;m_rdb_btn_RenumberPages.ZOrder" xml:space="preserve">
-    <value>3</value>
+    <value>5</value>
   </data>
   <metadata name="helpProvider1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
@@ -273,32 +273,59 @@
   <data name="helpProvider1.HelpNamespace" xml:space="preserve">
     <value>Obi Help.chm</value>
   </data>
-  <data name="m_rtb_btn_AudioProcessing.AutoSize" type="System.Boolean, mscorlib">
+  <data name="m_rdb_Copy.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
-  <data name="m_rtb_btn_AudioProcessing.Location" type="System.Drawing.Point, System.Drawing">
-    <value>280, 19</value>
+  <data name="m_rdb_Copy.Location" type="System.Drawing.Point, System.Drawing">
+    <value>606, 19</value>
   </data>
-  <data name="m_rtb_btn_AudioProcessing.Size" type="System.Drawing.Size, System.Drawing">
-    <value>107, 17</value>
+  <data name="m_rdb_Copy.Size" type="System.Drawing.Size, System.Drawing">
+    <value>49, 17</value>
   </data>
-  <data name="m_rtb_btn_AudioProcessing.TabIndex" type="System.Int32, mscorlib">
-    <value>4</value>
+  <data name="m_rdb_Copy.TabIndex" type="System.Int32, mscorlib">
+    <value>7</value>
   </data>
-  <data name="m_rtb_btn_AudioProcessing.Text" xml:space="preserve">
-    <value>Audio Processing</value>
+  <data name="m_rdb_Copy.Text" xml:space="preserve">
+    <value>C&amp;opy</value>
   </data>
-  <data name="&gt;&gt;m_rtb_btn_AudioProcessing.Name" xml:space="preserve">
-    <value>m_rtb_btn_AudioProcessing</value>
+  <data name="&gt;&gt;m_rdb_Copy.Name" xml:space="preserve">
+    <value>m_rdb_Copy</value>
   </data>
-  <data name="&gt;&gt;m_rtb_btn_AudioProcessing.Type" xml:space="preserve">
+  <data name="&gt;&gt;m_rdb_Copy.Type" xml:space="preserve">
     <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;m_rtb_btn_AudioProcessing.Parent" xml:space="preserve">
+  <data name="&gt;&gt;m_rdb_Copy.Parent" xml:space="preserve">
     <value>m_gp_box_operation</value>
   </data>
-  <data name="&gt;&gt;m_rtb_btn_AudioProcessing.ZOrder" xml:space="preserve">
-    <value>2</value>
+  <data name="&gt;&gt;m_rdb_Copy.ZOrder" xml:space="preserve">
+    <value>0</value>
+  </data>
+  <data name="m_rdb_Cut.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="m_rdb_Cut.Location" type="System.Drawing.Point, System.Drawing">
+    <value>527, 19</value>
+  </data>
+  <data name="m_rdb_Cut.Size" type="System.Drawing.Size, System.Drawing">
+    <value>41, 17</value>
+  </data>
+  <data name="m_rdb_Cut.TabIndex" type="System.Int32, mscorlib">
+    <value>6</value>
+  </data>
+  <data name="m_rdb_Cut.Text" xml:space="preserve">
+    <value>&amp;Cut</value>
+  </data>
+  <data name="&gt;&gt;m_rdb_Cut.Name" xml:space="preserve">
+    <value>m_rdb_Cut</value>
+  </data>
+  <data name="&gt;&gt;m_rdb_Cut.Type" xml:space="preserve">
+    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;m_rdb_Cut.Parent" xml:space="preserve">
+    <value>m_gp_box_operation</value>
+  </data>
+  <data name="&gt;&gt;m_rdb_Cut.ZOrder" xml:space="preserve">
+    <value>1</value>
   </data>
   <data name="m_rtb_btn_TimeElapsed.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -325,7 +352,34 @@
     <value>m_gp_box_operation</value>
   </data>
   <data name="&gt;&gt;m_rtb_btn_TimeElapsed.ZOrder" xml:space="preserve">
-    <value>0</value>
+    <value>2</value>
+  </data>
+  <data name="m_rtb_btn_AudioProcessing.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="m_rtb_btn_AudioProcessing.Location" type="System.Drawing.Point, System.Drawing">
+    <value>280, 19</value>
+  </data>
+  <data name="m_rtb_btn_AudioProcessing.Size" type="System.Drawing.Size, System.Drawing">
+    <value>107, 17</value>
+  </data>
+  <data name="m_rtb_btn_AudioProcessing.TabIndex" type="System.Int32, mscorlib">
+    <value>4</value>
+  </data>
+  <data name="m_rtb_btn_AudioProcessing.Text" xml:space="preserve">
+    <value>Audio Processing</value>
+  </data>
+  <data name="&gt;&gt;m_rtb_btn_AudioProcessing.Name" xml:space="preserve">
+    <value>m_rtb_btn_AudioProcessing</value>
+  </data>
+  <data name="&gt;&gt;m_rtb_btn_AudioProcessing.Type" xml:space="preserve">
+    <value>System.Windows.Forms.RadioButton, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;m_rtb_btn_AudioProcessing.Parent" xml:space="preserve">
+    <value>m_gp_box_operation</value>
+  </data>
+  <data name="&gt;&gt;m_rtb_btn_AudioProcessing.ZOrder" xml:space="preserve">
+    <value>4</value>
   </data>
   <data name="m_gp_box_operation.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 12</value>
@@ -334,7 +388,7 @@
     <value>True</value>
   </data>
   <data name="m_gp_box_operation.Size" type="System.Drawing.Size, System.Drawing">
-    <value>540, 59</value>
+    <value>678, 55</value>
   </data>
   <data name="m_gp_box_operation.TabIndex" type="System.Int32, mscorlib">
     <value>0</value>
@@ -358,7 +412,10 @@
     <value>6, 13</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>566, 162</value>
+    <value>717, 212</value>
+  </data>
+  <data name="$this.ShowHelp" type="System.Boolean, mscorlib">
+    <value>True</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Assign note/ Renumber pages</value>
