-> Paste multiple phrases when selection is at section level. -> paste will not take place if you select position inside range of selected phrases.

--- a/Obi/Obi/messages.resx
+++ b/Obi/Obi/messages.resx
@@ -3028,4 +3028,7 @@ Error text: {1}</value>
   <data name="WrongFormat" xml:space="preserve">
     <value>File imported is in wrong format. Make sure proper level is given for each section.</value>
   </data>
+  <data name="PasteNotAllowed" xml:space="preserve">
+    <value>Pasting inside the selected phrases are not allowed</value>
+  </data>
 </root>
