--- a/Obi/Obi/ProjectView/ContentView.resx
+++ b/Obi/Obi/ProjectView/ContentView.resx
@@ -350,7 +350,7 @@
     <value>192, 22</value>
   </data>
   <data name="ContextPasteMultiplePhrasesToolStripMenuItem.Text" xml:space="preserve">
-    <value>Paste Multiple Phrases</value>
+    <value>&amp;Paste Multiple Phrases</value>
   </data>
   <data name="toolStripMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
     <value>208, 22</value>
@@ -691,7 +691,7 @@
     <value>verticalScrollToolStripContainer1</value>
   </data>
   <data name="&gt;&gt;verticalScrollToolStripContainer1.Type" xml:space="preserve">
-    <value>Obi.ProjectView.VerticalScrollToolStripContainer, Obi, Version=4.1.0.24815, Culture=neutral, PublicKeyToken=null</value>
+    <value>Obi.ProjectView.VerticalScrollToolStripContainer, Obi, Version=4.1.0.33211, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;verticalScrollToolStripContainer1.Parent" xml:space="preserve">
     <value>$this</value>
@@ -724,7 +724,7 @@
     <value>contentViewLabel1</value>
   </data>
   <data name="&gt;&gt;contentViewLabel1.Type" xml:space="preserve">
-    <value>Obi.ProjectView.ContentViewLabel, Obi, Version=4.1.0.24815, Culture=neutral, PublicKeyToken=null</value>
+    <value>Obi.ProjectView.ContentViewLabel, Obi, Version=4.1.0.33211, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;contentViewLabel1.Parent" xml:space="preserve">
     <value>$this</value>
@@ -975,6 +975,12 @@
   <data name="&gt;&gt;ContextEndMarkToolStripMenuItem.Type" xml:space="preserve">
     <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="&gt;&gt;ContextPasteMultiplePhrasesToolStripMenuItem.Name" xml:space="preserve">
+    <value>ContextPasteMultiplePhrasesToolStripMenuItem</value>
+  </data>
+  <data name="&gt;&gt;ContextPasteMultiplePhrasesToolStripMenuItem.Type" xml:space="preserve">
+    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="&gt;&gt;Context_SkippablesMenuItem.Name" xml:space="preserve">
     <value>Context_SkippablesMenuItem</value>
   </data>
@@ -1142,12 +1148,6 @@
   </data>
   <data name="&gt;&gt;timer1.Type" xml:space="preserve">
     <value>System.Windows.Forms.Timer, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;ContextPasteMultiplePhrasesToolStripMenuItem.Name" xml:space="preserve">
-    <value>ContextPasteMultiplePhrasesToolStripMenuItem</value>
-  </data>
-  <data name="&gt;&gt;ContextPasteMultiplePhrasesToolStripMenuItem.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="&gt;&gt;$this.Name" xml:space="preserve">
     <value>ContentView</value>
