--- a/trunk/Obi/Obi/messages.resx
+++ b/trunk/Obi/Obi/messages.resx
@@ -3031,4 +3031,7 @@ Error text: {1}</value>
   <data name="PasteNotAllowed" xml:space="preserve">
     <value>Pasting inside the selected phrases are not allowed</value>
   </data>
+  <data name="Project_MaximumPhrasesSelectLimit" xml:space="preserve">
+    <value>Maximum 500 phrases can be selected for multi phrase operations like cut and copy.</value>
+  </data>
 </root>
