--- a/Obi/Obi/ObiForm.fr.resx
+++ b/Obi/Obi/ObiForm.fr.resx
@@ -3526,4 +3526,10 @@
   <data name="&gt;&gt;$this.Type" xml:space="preserve">
     <value>System.Windows.Forms.Form, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="mImportTOCMenuItem.Text" xml:space="preserve">
+    <value>&amp;Importer et remplacer TDM</value>
+  </data>
+  <data name="m_pasteMultiplePhrasesToolStripMenuItem.Text" xml:space="preserve">
+    <value>&amp;Coller Phrases Multiples</value>
+  </data>
 </root>
